stateDiagram-v2
WaitingForPPS --> WaitingForPS : PPSDone
WaitingForPS --> OrganizedForSending : Organize
OrganizedForSending --> InReview : SendForReview
InReview --> ReviewApproved : ReviewApprove
InReview --> ReviewRejected : ReviewReject
ReviewApproved --> CustomerNotified : NotifyCustomer
ReviewRejected --> CustomerModifyingForRejection : NotifyCustomerOfRejection
CustomerModifyingForRejection --> OrganizedForSending : Organize
